# advent-of-code

./: .gitignore  Cargo.toml  justfile  pyproject.toml
2021/day_01/: part1.hs  part2.hs
2021/day_02/: part1.hs  part2.hs
2021/day_03/: part1.hs  part2.hs
2021/day_04/: s.rs
2021/day_04_rs/: s.rs
2021/day_05/: s.py
2022/day_01/: s.py
2022/day_02/: s.py
2022/day_03/: part1.hs  part2.hs  s.py
2022/day_04/: s.jl
2022/day_05/: s.py
2022/day_06/: s.py
2022/day_07/: s.py
2022/day_08/: s.py
2022/day_09/: s.py
2022/day_10/: s.py
2022/day_11/: s.py
2025/day_01/: s.hs  s.jl  s.py  s.rs
2025/day_02/: s.hs  s.py
2025/day_03/: s.hs  s.py
2025/day_04/: s.hs  s.py
2025/day_05/: s.py
2025/day_06/: s.py
2025/day_07/: s.py
2025/day_08/: s.py
2025/day_09/: s.py
2025/day_10/: s.py
2025/day_11/: s.py
2025/day_12/: s.py
scripts/: daypath.sh  getinput.sh  setuppy.sh
templates/: s.py
utils/: __init__.py  tables.py
