[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "numpy>=2.3.4",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 80
select = ["E", "F", "W", "Q", "I"]

[tool.setuptools]
packages = ["utils"]
